@@ -60,5 +60,13 @@ incdir = os.path.join (env['includedir'], 'syx')
 env.Install (incdir, includes)
 env.Alias ('install', incdir)
 
+if env['PLATFORM'] == 'posix':
+    senv = env.Clone ()
+    senv['ENV'] = os.environ
+    env.Alias ('install', senv.Command ('ldconfig', lib_shared,
+                                        ['@echo -n Updating ld cache...',
+                                         '@ldconfig',
+                                         '@echo " done"']))
+
 target = env.Install (os.path.join (distdir, 'syx'), includes)
 env.Alias ('sdist', target)
